--- a/src/ui/popup/index.pug
+++ b/src/ui/popup/index.pug
@@ -21,7 +21,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Document
-    link(rel="stylesheet", href="dist/css/mystyles.css")
+    link(rel="stylesheet", href="./css/mystyles.css")
   body      
     .card
       header.card-header
@@ -44,4 +44,4 @@ html(lang="en")
               a#add-fields-confirm.button.is-small.is-primary(href="#" data-source-element-id="add-fields-source" data-target-element-id="add-fields-target" title="Save")
                 span.icon.is-small ✔
       footer.card-footer
-    script(src="./dist/main.js")
+    script(src="./js/main.js")
