Add conditionals for options_ui in background script

--- a/src/ui/settings.pug
+++ b/src/ui/settings.pug
@@ -7,7 +7,7 @@ html(lang="en")
   body
     form
       label Notifications
-      input#input-notifications(type="checkbox")
+      input#input-notifications(type="checkbox" checked)
       label Deep Redirection
-      input#input-deep-redirection(type="checkbox")
+      input#input-deep-redirection(type="checkbox" checked)
     script(src="settings.bundle.js")
