Add styling to options_ui

--- a/src/ui/settings.pug
+++ b/src/ui/settings.pug
@@ -4,10 +4,15 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Document
+    link(rel="stylesheet", href="theme.css")
   body
-    form
-      label Notifications
-      input#input-notifications(type="checkbox" checked)
-      label Deep Redirection
-      input#input-deep-redirection(type="checkbox" checked)
+    .field
+      p.control
+        label.checkbox
+          input#input-notifications(type="checkbox" checked)
+        |  Notifications
+      p.control
+        label.checkbox
+          input#input-deep-redirection(type="checkbox" checked)
+        |  Deep Redirection
     script(src="settings.bundle.js")
