--- a/src/ui/editor.pug
+++ b/src/ui/editor.pug
@@ -30,7 +30,7 @@ html(lang="en")
                 p.control
                   label.checkbox
                     input#check-deep-recurse(type="checkbox")
-                    |   Deep Recurse
+                    |   Deep Redirect
                 p.control
                   label.checkbox
                     input#check-regex(type="checkbox")
